# Shannon-Model

./: .gitignore  .last-seen-comment  AGENTS.md  README.md  WILL.md  checklist.md  datasets.md  future.md  hardware_operators.md  pyproject.toml  spec_management.ps1  task.md
.github/workflows/: build.yml  lint.yml  neutron-ci.yml  release.yml  test.yml
common/: __init__.py  attention_utils.py  checkpoint.py  config_loader.py  data_utils.py  device.py  distributed.py  logger.py  metrics.py  quantization.py
common/agent/: __init__.py  memory.py  orchestrator.py  react_cra.py  runtime.py  self_play.py  self_reflect.py  social.py
common/attention/: __init__.py  base.py  dynamic.py  gated.py  kda.py  lightning.py  mla.py  mma.py  moh.py  sliding.py  unified.py
common/ctm/: __init__.py  ctm_loss.py  mla_sync.py  nlm.py  router.py
common/inference/: __init__.py  cache.py  memory.py  moe_spec_decode.py  quantizer.py  scheduler.py  stream.py
common/latent_decode/: __init__.py  ar_fallback.py  codebook.py  flow_planner.py  hierarchical_nar.py  human_stream.py  lean_verifier.py  mask_refine.py  mode_switch.py  spec_decode.py
common/layers/: __init__.py  activation.py  checkpoint_utils.py  mask_utils.py  norm.py  residual.py  rope.py
common/nsl/: __init__.py  bridge.py  decoder.py  grammar.py  parser.py
common/sre/: __init__.py  coordinator.py  fusion.py  lean_channel.py  python_channel.py  sympy_channel.py  tool_gating.py  tool_memory.py
common/training/: __init__.py  checkpoint.py  evaluator.py  losses.py  optimizers.py  phased_train.py  (+1 more)
models/: __init__.py
(+72 files in other folders)
